--- a/src/app/reserva/reserva.component.css
+++ b/src/app/reserva/reserva.component.css
@@ -1,4 +1,34 @@
-.bg{background-color:#cccccc !important;}
+.table td, .table th {
+    padding: .4rem;
+}
+
+thead{
+
+	font-size: .8rem;
+}
+
+tbody{
+
+	font-size: .75rem;
+}
+
+.container-fluid {
+    padding-left: 0px;
+		padding-top: 10px;
+}
+
+.add {
+    position: fixed;
+    top: 70px;
+    right: 4.4rem;
+    z-index: 999;
+    margin-left: 0px;
+}
+
+.bg{
+
+	background-color:#cccccc !important;
+}
 
 ._selected{
 
@@ -71,4 +101,9 @@
 
 	opacity: 1;
 	box-shadow: none;
+}
+
+.dropdown-menu {
+	
+    font-size: .9rem;
 }
