--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,65 +1,86 @@
+<!-- <div class="sticky-top">
+	<div class="container">
+		<h3 class="display-4">{{user.hospedaje}}</h3>
+		<hr class="my-2">
+	</div>
+</div> -->
 <div class="container">
-	<div class="sticky-top">
-		<div class="container">
-			<h1 class="display-3">Próximos pasajeros</h1>
-			<hr class="my-2">
-		</div>		
-	</div>
-	<div class="card mb-2" *ngFor="let reserva of reservadosDb">
-		<h5 class="card-header text-center" [ngClass]="checked(reserva)">
-			{{reserva.pasajero + ' (' + reserva.noPersonas +' personas)'}}
-			&nbsp;/&nbsp;
-			{{'Estado: ' + getEstado(reserva)}}
-		</h5>
-		<div class="card-block">
-			<div class="row">
-				<div class="col-md-6">
-					<h5 class="card-title">
-						<small>Desde</small>&nbsp;
-						{{reserva.feDesde | date : 'dd/MMM/yyyy'}}
-						<small>Hasta</small>&nbsp;
-						{{reserva.feHasta | date : 'dd/MMM/yyyy'}}
-					</h5>					
-				</div>			
-				<div class="col-md-6">
-					<strong>Llega en:</strong>&nbsp;{{reserva.aerolinea}}					
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<p class="card-text">
-					  <strong>Habitaciones:</strong>&nbsp;{{reserva.habitaciones}}
-					</p>					
-				</div>			
-				<div class="col-md-6">
-					<p class="card-text">
-					  <strong>Adicionales:</strong>&nbsp;{{reserva.adicionales}}
-					</p>					
-				</div>
-			</div>			
-			<!-- <div class="row">	
-				<div class="col-md-12">
-					<p class="text-center">
-					  <strong>Contacto</strong>
-					</p>						
-				</div>			  
-			</div> -->
-			<div class="row">
-				<div class="col-md-6">
-					<p class="card-text">
-					  <strong>Correo:</strong>&nbsp;{{reserva.correo}}
-					</p>					
-				</div>			
-				<div class="col-md-6">
-					<p class="card-text">
-					  <strong>Número de contacto:</strong>&nbsp;{{reserva.noContacto}}
-					</p>					
-				</div>
-			</div>
-		<!-- <p class="card-text">
-		  <strong>Correo:</strong>&nbsp;{{reserva.correo}}
-		  <strong>Número de contacto:</strong>&nbsp;{{reserva.noContacto}}
-		</p> -->
-		</div>
-	</div>
+	<h3 class="display-4">{{user.hospedaje}}</h3>
+	<hr class="my-2">
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-9 col-md-10 col-sm-12">
+			<div class="row">
+				<div class="col-md-8">
+					<h3 class="display-5">{{modiFecha}}</h3>
+				</div>
+				<div class="col-md-4">
+					<div class="row">
+						<div class="input-group col-md-10 ml-auto mr-auto">
+						  <span class="input-group-btn">
+								<button class="btn btn-side" type="button" (click)="previousDate()">
+									<i class="fa fa-chevron-left" aria-hidden="true"></i>
+								</button>
+						  </span>
+						  <!-- <input type="text" class="form-control" placeholder="Product name" aria-label="Product name"> -->
+							<my-date-picker name="mydate" [options]="myDatePickerOptions"
+                    [(ngModel)]="fecha" (dateChanged)="onDateChanged($event)"></my-date-picker>
+						  <span class="input-group-btn">
+								<button class="btn btn-side" type="button" (click)="nextDate()">
+									<i class="fa fa-chevron-right" aria-hidden="true"></i>
+								</button>
+						  </span>
+						</div>
+					</div>
+				</div>
+			</div>
+			<hr class="my-2">
+			<!-- <p class="float-right d-md-none">
+				<button type="button" class="btn btn-primary btn-sm" data-toggle="offcanvas">Notificaciones</button>
+			</p> -->
+			<ul class="nav nav-tabs" id="myTab" role="tablist">
+			  <li class="nav-item">
+			    <a class="nav-link active" id="llegadas-tab" data-toggle="tab" href="#llegadas" role="tab" aria-controls="home" aria-expanded="true">Llegadas{{ ' (' + llegadas.length + ')'}}</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" id="salidas-tab" data-toggle="tab" href="#salidas" role="tab" aria-controls="salidas">Salidas{{ ' (' + salidas.length + ')'}}</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" id="estancias-tab" data-toggle="tab" href="#estancias" role="tab" aria-controls="estancias">Estancias{{ ' (' + estancias.length + ')'}}</a>
+			  </li>
+			</ul>
+			<div class="tab-content" id="myTabContent">
+			  <div class="tab-pane fade show active" id="llegadas" role="tabpanel" aria-labelledby="llegadas-tab">
+					<card-reservas [reservas]="llegadas"></card-reservas>
+				</div>
+			  <div class="tab-pane fade" id="salidas" role="tabpanel" aria-labelledby="salidas-tab">
+					<card-reservas [reservas]="salidas"></card-reservas>
+				</div>
+			  <div class="tab-pane fade" id="estancias" role="tabpanel" aria-labelledby="estancias-tab">
+					<card-reservas [reservas]="estancias"></card-reservas>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<h3 class="display-5">Actividad Reciente</h3>
+				</div>
+			</div>
+			<hr class="my-2">
+			<card-reservas [reservas]="reservadosDb"></card-reservas>
+    </div><!--/span-->
+
+    <div class="col-lg-3 col-md-2 col-sm-12" id="sidebar">
+
+			<div class="card">
+			  <div class="card-body">
+			    <h4 class="card-title">Notificaciones</h4>
+			    <!-- <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> -->
+			    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A eveniet unde ipsum, autem sunt, aperiam, quam harum quibusdam consectetur, sed doloribus? Reprehenderit expedita quam aperiam recusandae, quasi. Ratione, illum, aliquam!</p>
+			    <!-- <a href="#" class="card-link">Card link</a>
+			    <a href="#" class="card-link">Another link</a> -->
+			  </div>
+			</div>
+
+  </div><!--/row-->
+</div><!--/.container-->
