--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -1,14 +1,14 @@
 <div class="container default-container">
 	<div class="col-md-12">
 		<div class="card">
-		  <div class="card-block">
+		  <div class="card-body">
 		    <h2>Habitaciones</h2>
 		  </div>
 		</div>
 	</div>
 	<div class="col-md-12">
 		<div class="card">
-		  <div class="card-block">
+		  <div class="card-body">
 		    <h2>Registros
 		    	<small>Habitaciones</small>
 		    	<!-- <a class="bg-circle bg-danger pull-right" (click)="setNuevo()" data-toggle="modal" data-target="#habitacionModal">
