--- a/src/app/card-reservas/card-reservas.component.html
+++ b/src/app/card-reservas/card-reservas.component.html
@@ -6,7 +6,7 @@
     </div>
   </div>
 </div>
-<div *ngFor="let reserva of reservas; let i = index">
+<!-- <div *ngFor="let reserva of reservas; let i = index">
   <div class="card mb-2">
     <div class="row">
       <div class="col-md-auto pr-0">
@@ -96,4 +96,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
