--- a/src/app/card-reservas/card-reservas.component.html
+++ b/src/app/card-reservas/card-reservas.component.html
@@ -6,10 +6,10 @@
     </div>
   </div>
 </div>
-<!-- <div *ngFor="let reserva of reservas; let i = index">
+<div *ngFor="let reserva of reservas; let i = index">
   <div class="card mb-2">
     <div class="row">
-      <div class="col-md-auto pr-0">
+      <!-- <div class="col-md-auto pr-0">
         <div class="reservation-dates mb-1 mt-1">
           <div class="dashboard-arrival-date">
             <p class="stacked-dates-month">{{reserva.feDesde | date : 'MMM'}}</p>
@@ -20,7 +20,7 @@
             <p class="stacked-dates-day">{{addDay(reserva.feHasta) | date : 'dd'}}</p>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="col-md-4 pl-2 mt-auto mb-auto">
         <div class="row">
           <div class="col-md-12">
@@ -96,4 +96,4 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
