--- a/src/app/card-reservas/card-reservas.component.html
+++ b/src/app/card-reservas/card-reservas.component.html
@@ -30,8 +30,8 @@
         <div class="row">
           <div class="col-md-12">
             {{reserva.noPersonas}}&nbsp;personas
-            &nbsp;-&nbsp;{{nightDiff(reserva)}}&nbsp;noches
-            <!--<span *ngIf="reserva.estado" [ngClass]="getEstadoStyle(reserva)" class="badge badge-pill">{{getEstado(reserva)}}</span> -->
+            <!-- &nbsp;-&nbsp;{{nightDiff(reserva)}}&nbsp;noches -->
+            <span *ngIf="reserva.estado" [ngClass]="getEstadoStyle(reserva)" class="badge badge-pill">{{getEstado(reserva)}}</span>
           </div>
         </div>
         <div class="row mt-2">
