--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,10 @@
 html {
   font-size: 15px; }
 
+.modal-open .modal {
+  overflow-x: hidden;
+  overflow-y: auto; }
+
 .modal-header {
   background: rgba(0, 34, 51, 0.88);
   color: white; }
