--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
 			    </ul>
 			  </div>
 			  <div class="d-flex flex-row-reverse w-100">
-			  	<div class="p-2">		  				  	
+			  	<div class="p-2">
 					<ul *ngIf="currentUser" class="navbar-nav">
 					  <li class="nav-item dropdown">
 					    <a class="nav-link dropdown-toggle" style="font-size:1rem;" href="#" id="ddMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -52,7 +52,7 @@
 					  </li>
 					</ul>
 				</div>
-				</div>			  
+				</div>
 			</nav>
 		</header>
 	</section>
@@ -69,11 +69,11 @@
             </li>
             <li>
                 <a [routerLink]="['/reserva']">Reservas</a>
-            </li>            
+            </li>
             <li>
                 <span style="color: white;">
                 	<i class="fa fa-cog" aria-hidden="true"></i>
-                	Mantenimientos                	
+                	Mantenimientos
                 </span>
             </li>
             <li>
@@ -88,134 +88,133 @@
 
     <!-- Page Content -->
     <div id="page-content-wrapper">
-        <div class="container-fluid">        	
+        <div class="container-fluid">
             <button [hidden]="!isLogged()" type="button" class="hamburger is-closed" data-toggle="offcanvas">
                 <span class="hamb-top"></span>
     			<span class="hamb-middle"></span>
 				<span class="hamb-bottom"></span>
             </button>
             <section class="wrapper">
-            	<router-outlet></router-outlet>            	
+            	<router-outlet></router-outlet>
             </section>
         </div>
+			<section class="pie">
+				<footer *ngIf="!isLogged()" class="mt-5">
+				  <div class="container-fluid bg-faded mt-5">
+				    <div class="container">
+				      <div class="row py-3">
+				        <!-- footer column 1 start -->
+				        <div class="col-md-4 col-sm-12">
+				          <!-- row start -->
+				          <div class="row py-2">
+				            <div class="col-sm-3 hidden-md-down">
+				              <a class="bg-circle bg-info" href="#">
+				                <i class="fa fa-2x fa-fw fa-address-card" aria-hidden="true"></i>
+				              </a>
+				            </div>
+				            <div class="col-sm-9">
+				              <h4>Contáctanos</h4>
+				              <p>Queremos saber de ti</p>
+				            </div>
+				          </div>
+				          <!-- row end -->
+				        </div>
+				        <!-- footer column 1 end -->
+				        <!-- footer column 2 start -->
+				        <div class="col-md-4 col-sm-12">
+				          <!-- row start -->
+				          <div class="row py-2">
+				            <div class="col-sm-3 hidden-md-down">
+				              <a class="bg-circle bg-info" href="https://twitter.com/ ">
+				                <i class="fa fa-2x fa-fw fa-twitter" aria-hidden="true "></i>
+				              </a>
+				            </div>
+				            <div class="col-sm-9">
+				              <h4>Tweets</h4>
+				              Embed here?
+				            </div>
+				          </div>
+				          <!-- row end -->
+				          <!-- row start -->
+				          <!-- <div class="row py-2">
+				            <div class="col-sm-3 hidden-md-down">
+				              <a class="bg-circle bg-info" href="#">
+				                <i class="fa fa-2x fa-fw fa-laptop" aria-hidden="true"></i>
+				              </a>
+				            </div>
+				            <div class="col-sm-9">
+				              <h4>Cookie policy</h4>
+				              <p class=" ">We use <a class=" " href="/#">cookies </a></p>
+				            </div>
+				          </div> -->
+				          <!-- row end -->
+				        </div>
+				        <!-- footer column 2 end -->
+				        <!-- footer column 3 start -->
+				        <div class="col-md-4 col-sm-12">
+				          <!-- row starting  -->
+				          <div class="row py-2">
+				            <div class="col-sm-3 hidden-md-down">
+				              <a class="bg-circle bg-danger" href="# ">
+				                <i class="fa fa-2x fa-fw fa-file-pdf-o" aria-hidden="true"></i>
+				              </a>
+				            </div>
+				            <div class="col-sm-9">
+				              <h4>Download pdf</h4>
+				              <p> You like print?</p>
+				            </div>
+				          </div>
+				          <!-- row ended -->
+				          <!-- row starting  -->
+				          <!-- <div class="row py-2">
+				            <div class="col-sm-3 hidden-md-down">
+				              <a class="bg-circle bg-info" href="https://twitter.com/ ">
+				                <i class="fa fa-2x fa-fw fa-info" aria-hidden="true "></i>
+				              </a>
+				            </div>
+				            <div class="col-sm-9">
+				              <h4>Info</h4>
+				              About us.
+				            </div>
+				          </div> -->
+				          <!-- row ended -->
+				        </div>
+				        <!-- footer column 3 end -->
+				      </div>
+				    </div>
+				  </div>
+				  <div class="container-fluid bg-primary">
+				    <div class="container">
+				      <div class="row py-3">
+				        <div class="col-md-9">
+				          <p class="text-white">Cristhian E. López Zambrano</p>
+				        </div>
+				        <div class="col-md-3">
+				          <div class="d-inline-block">
+				            <div class="bg-circle-outline d-inline-block">
+				              <a href="https://www.facebook.com/" class="text-white">
+												<i class="fa fa-2x fa-fw fa-facebook"></i>
+											</a>
+				            </div>
+				            <div class="bg-circle-outline d-inline-block">
+				              <a href="https://twitter.com/" class="text-white">
+				                <i class="fa fa-2x fa-fw fa-twitter"></i>
+											</a>
+				            </div>
+				            <div class="bg-circle-outline d-inline-block">
+				              <a href="https://www.linkedin.com/company/" class="text-white">
+				                <i class="fa fa-2x fa-fw fa-linkedin"></i></a>
+				            </div>
+				          </div>
+				        </div>
+				      </div>
+				    </div>
+				  </div>
+				</footer>
+			</section>
     </div>
     <!-- /#page-content-wrapper -->
-	<section class="pie">
-		<footer *ngIf="!isLogged()" class="mt-5 hidden-sm-down">
-		  <div class="container-fluid bg-faded mt-5">
-		    <div class="container">
-		      <div class="row py-3">
-		        <!-- footer column 1 start -->
-		        <div class="col-md-4">
-		          <!-- row start -->
-		          <div class="row py-2">
-		            <div class="col-sm-3 hidden-md-down">
-		              <a class="bg-circle bg-info" href="#">
-		                <i class="fa fa-2x fa-fw fa-address-card" aria-hidden="true"></i>
-		              </a>
-		            </div>
-		            <div class="col-sm-9">
-		              <h4>Contáctanos</h4>
-		              <p>Queremos saber de ti</p>
-		            </div>
-		          </div>
-		          <!-- row end -->
-		        </div>
-		        <!-- footer column 1 end -->
-		        <!-- footer column 2 start -->
-		        <div class="col-md-4">
-		          <!-- row start -->
-		          <div class="row py-2">
-		            <div class="col-sm-3 hidden-md-down">
-		              <a class="bg-circle bg-info" href="https://twitter.com/ ">
-		                <i class="fa fa-2x fa-fw fa-twitter" aria-hidden="true "></i>
-		              </a>
-		            </div>
-		            <div class="col-sm-9">
-		              <h4>Tweets</h4>
-		              Embed here?
-		            </div>
-		          </div>
-		          <!-- row end -->
-		          <!-- row start -->
-		          <!-- <div class="row py-2">
-		            <div class="col-sm-3 hidden-md-down">
-		              <a class="bg-circle bg-info" href="#">
-		                <i class="fa fa-2x fa-fw fa-laptop" aria-hidden="true"></i>
-		              </a>
-		            </div>
-		            <div class="col-sm-9">
-		              <h4>Cookie policy</h4>
-		              <p class=" ">We use <a class=" " href="/#">cookies </a></p>
-		            </div>
-		          </div> -->
-		          <!-- row end -->
-		        </div>
-		        <!-- footer column 2 end -->
-		        <!-- footer column 3 start -->
-		        <div class="col-md-4">
-		          <!-- row starting  -->
-		          <div class="row py-2">
-		            <div class="col-sm-3 hidden-md-down">
-		              <a class="bg-circle bg-danger" href="# ">
-		                <i class="fa fa-2x fa-fw fa-file-pdf-o" aria-hidden="true"></i>
-		              </a>
-		            </div>
-		            <div class="col-sm-9">
-		              <h4>Download pdf</h4>
-		              <p> You like print?</p>
-		            </div>
-		          </div>
-		          <!-- row ended -->
-		          <!-- row starting  -->
-		          <!-- <div class="row py-2">
-		            <div class="col-sm-3 hidden-md-down">
-		              <a class="bg-circle bg-info" href="https://twitter.com/ ">
-		                <i class="fa fa-2x fa-fw fa-info" aria-hidden="true "></i>
-		              </a>
-		            </div>
-		            <div class="col-sm-9">
-		              <h4>Info</h4>
-		              About us.
-		            </div>
-		          </div> -->
-		          <!-- row ended -->
-		        </div>
-		        <!-- footer column 3 end -->
-		      </div>
-		    </div>
-		  </div>
-		  <div class="container-fluid bg-primary">
-		    <div class="container">
-		      <div class="row py-3">
-		        <div class="col-md-9">
-		          <p class="text-white">Cristhian E. López Zambrano</p>
-		        </div>
-		        <div class="col-md-3">
-		          <div class="d-inline-block">
-		            <div class="bg-circle-outline d-inline-block">
-		              <a href="https://www.facebook.com/" class="text-white"><i class="fa fa-2x fa-fw fa-facebook"></i>
-				</a>
-		            </div>
-
-		            <div class="bg-circle-outline d-inline-block">
-		              <a href="https://twitter.com/" class="text-white">
-		                <i class="fa fa-2x fa-fw fa-twitter"></i></a>
-		            </div>
-
-		            <div class="bg-circle-outline d-inline-block">
-		              <a href="https://www.linkedin.com/company/" class="text-white">
-		                <i class="fa fa-2x fa-fw fa-linkedin"></i></a>
-		            </div>
-		          </div>
-		        </div>
-		      </div>
-		    </div>
-		  </div>
-		</footer>		
-	</section>
 </div>
 <!-- /#wrapper -->
 <confirm></confirm>
 <message></message>
-
