--- a/src/app/reserva/reserva.component.html
+++ b/src/app/reserva/reserva.component.html
@@ -41,7 +41,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let room of rooms; let i = index">
-        <td *ngIf="i==0" [attr.rowspan]="rooms.length" class="_nah align-middle" (click)="previous()">
+        <td *ngIf="i==0" [attr.rowspan]="rooms.length" class="_nah0 align-middle" (click)="previous()">
           <i class="fa fa-chevron-left" aria-hidden="true"></i>
         </td>
         <td>{{room.noHabitacion}}</td>
@@ -53,7 +53,7 @@
           </a> -->
           <!-- <a *ngIf="!isReserved(room, dia.day + 1)" tabindex="0" class="btn btn-xs btn-default rounded-0 w-100 h-100" role="button"></a> -->
         </td>
-        <td *ngIf="i==0" [attr.rowspan]="rooms.length" class="_nah align-middle" (click)="next()">
+        <td *ngIf="i==0" [attr.rowspan]="rooms.length" class="_nah0 align-middle" (click)="next()">
           <i class="fa fa-chevron-right" aria-hidden="true"></i>
         </td>
       </tr>
@@ -319,12 +319,12 @@
                       <h4>Total</h4>
                     </div>
                   </div>
-                  <div *ngIf="!model.estado == 'Pr'" class="d-flex flex-row-reverse">
+                  <div *ngIf="model.estado != 'Pr'" class="d-flex flex-row-reverse">
                     <div class="p-2">
-                      <a [hidden]= "model.checkout == 0" href="javascript:;">
+                      <a [hidden]= "model.estado != 'Co'" href="javascript:;">
                         <h5>{{model.totalPagado | currency:'USD':true}}</h5>
                       </a>
-                      <a [hidden]="model.checkout == 1" href="javascript:;" (click)="getPagos()" data-dismiss="modal" data-toggle="modal" data-target="#pagosModal">
+                      <a [hidden]="model.estado == 'Co'" href="javascript:;" (click)="getPagos()" data-dismiss="modal" data-toggle="modal" data-target="#pagosModal">
                         <h5>{{model.totalPagado | currency:'USD':true}}</h5>
                       </a>
                     </div>
@@ -332,9 +332,9 @@
                       <h5>Pagado</h5>
                     </div>
                   </div>
-                  <div *ngIf="!model.estado == 'Pr'" class="d-flex flex-row-reverse">
+                  <div *ngIf="model.estado == 'Pr'" class="d-flex flex-row-reverse">
                     <div class="p-2">
-                      <h5>{{model.saldo | currency:'USD':true}}</h5>
+                      <h5>{{getTotal() - model.totalPagado | currency:'USD':true}}</h5>
                     </div>
                     <div class="p-2">
                       <h5>Saldo</h5>
@@ -357,10 +357,10 @@
             </div>
             <div *ngIf="accion!='I' && model.estado!='Pr'" [hidden]="loading" class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
               <div class="btn-group mr-2" role="group" aria-label="First group">
-                <button *ngIf="ocultaBtnModi('Ci')" type="button" class="btn btn-outline-danger" title="Check-in" (click)="check('Ci')">
+                <button *ngIf="ocultaBtnModi('Ci')" type="button" class="btn btn-outline-danger" title="Check-in" (click)="model.a_estado = 'Ci'" data-toggle="modal" data-target="#detalleEstadosModal">
                   <i class="fa fa-bed" aria-hidden="true"></i>
                 </button>
-                <button *ngIf="ocultaBtnModi('Co')" type="button" class="btn btn-outline-warnig" title="Check-out" (click)="check('Co')">
+                <button *ngIf="ocultaBtnModi('Co')" type="button" class="btn btn-outline-warnig" title="Check-out" (click)="model.a_estado = 'Co'" data-toggle="modal" data-target="#detalleEstadosModal">
                   <i class="fa fa-external-link-square" aria-hidden="true"></i>
                 </button>
                 <button *ngIf="ocultaBtnModi('U')" type="button" class="btn btn-outline-danger" title="Modificar" (click)="setModi()">
@@ -378,32 +378,7 @@
     </div>
   </div>
 </div>
-<!-- MODAL CANCELACION -->
-<div *ngIf="model" class="modal fade" id="cancelaModal">
-  <div class="modal-dialog modal-md" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Cancelación</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-	    <form name="form" class="col-md-12" (ngSubmit)="f.form.valid && delete()" #f="ngForm" novalidate>
-					<div class="form-group">
-							<label for="motivo">Motivo de cancelación</label>
-							<textarea class="form-control" id="motivo" name="motivo" rows="5" [(ngModel)]="model.motivo" #motivo="ngModel" required>{{model.motivo}}</textarea>
-              <div *ngIf="f.submitted && !motivo.valid" class="help-block form-control-feedback">La descripción del motivo es requerida</div>
-					</div>
-	        <div class="modal-footer">
-          	<img *ngIf="loading" src="/assets/images/loading.svg" />
-	          <button type="submit" class="btn btn-primary">Guardar
-	          </button>
-	          <button type="button" class="btn btn-light" data-dismiss="modal">Cancelar</button>
-	        </div>
-	    </form>
-    </div>
-  </div>
-</div>
+<detalle-estados [model]="model"></detalle-estados>
 <!-- MODAL PAGOS -->
 <div *ngIf="model.pago" style="z-index: 1048;" class="modal fade" data-backdrop="static" data-keyboard="false" id="pagosModal">
   <div class="modal-dialog modal-lg" role="document">
@@ -412,9 +387,9 @@
         <h5 class="modal-title">Pagos
           <i class="fa fa-money" aria-hidden="true"></i>
         </h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
-        </button>
+        </button> -->
       </div>
       <form class="col-md-12">
         <div class="row mt-1">
@@ -427,7 +402,7 @@
         <div class="form-group">
           <div class="card-deck mt-2">
             <div class="card text-center">
-              <div class="card-header card-info">
+              <div class="card-header bg-info">
                 <h3>Total</h3>
               </div>
               <div class="card-block">
@@ -435,7 +410,7 @@
               </div>
             </div>
             <div class="card text-center">
-              <div class="card-header card-success">
+              <div class="card-header bg-success">
                 <h3>Pagado</h3>
               </div>
               <div class="card-block">
@@ -443,11 +418,11 @@
               </div>
             </div>
             <div class="card text-center">
-              <div class="card-header card-warning">
+              <div class="card-header bg-warning">
                 <h3>Saldo</h3>
               </div>
               <div class="card-block">
-                <h1 class="card-title">{{model.saldo | currency:'USD':true}}</h1>
+                <h1 class="card-title">{{getTotal() - model.totalPagado | currency:'USD':true}}</h1>
               </div>
             </div>
           </div>
@@ -483,6 +458,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-light" data-dismiss="modal" data-toggle="modal" data-target="#reservaModal">Cerrar</button>
+          <!-- <button type="button" class="btn btn-light" (click)="cierraPagos()">Cerrar</button> -->
         </div>
       </form>
     </div>
