--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,8 +40,8 @@
 					    <a class="nav-link dropdown-toggle" style="font-size:1rem;" href="#" id="ddMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					      {{currentUser.nombre}}
 					    </a>
-					    <div class="dropdown-menu" aria-labelledby="ddMenu">
-					      <a class="dropdown-item" [routerLink]="['/contra']">Cambiar Contraseña
+					    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="ddMenu">
+					      <a class="dropdown-item" [routerLink]="['/pass']">Cambiar Contraseña
 					      	<i class="fa fa-key" aria-hidden="true"></i>
 					      </a>
 					      <div class="dropdown-divider"></div>
