--- a/src/app/reserva/reserva.component.html
+++ b/src/app/reserva/reserva.component.html
@@ -40,6 +40,13 @@
       </tr>
     </thead>
     <tbody>
+      <tr *ngIf="rooms.length==0">
+        <td [attr.colspan]="current.days.length + 4" style="text-align:center;">
+          <p>No tienes habitaciones registradas aun, registra tus habitaciones
+            <a [routerLink]="['/room']">aquí</a>
+          </p>
+        </td>
+      </tr>
       <tr *ngFor="let room of rooms; let i = index">
         <td *ngIf="i==0" [attr.rowspan]="rooms.length" class="_nah0 align-middle" (click)="previous()">
           <i class="fa fa-chevron-left" aria-hidden="true"></i>
@@ -77,12 +84,12 @@
         </h4>
         <font>{{'Estado: ' + getEstado()}}</font>
       </div>
-      <form name="form" class="col-md-12" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" novalidate>
+      <form name="form" class="col-md-12" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" [ngClass]="{ 'was-validated': f.submitted }" novalidate>
         <div *ngIf="esModi">
           <div class="modal-body">
               <div class="row">
                 <div class="col-md-6">
-                  <div class="form-group" [ngClass]="{ 'has-warning': noPass }">
+                  <!-- <div class="form-group" [ngClass]="{ 'has-warning': noPass }">
                       <label for="identificacion">Identificacion</label>
                       <div class="input-group">
                         <input type="text" class="form-control col-md-9" name="identificacion" [(ngModel)]="model.pass.identificacion" #identificacion="ngModel" [readonly]="!this.model.ident"/>
@@ -90,39 +97,67 @@
                           <input type="checkbox" aria-label="Checkbox for following text input" [checked]="model.ident" (change)="lockIdent()">
                         </span>
                         <span *ngIf="accion=='I'" class="input-group-btn">
-                          <button class="btn btn-light" type="button" [disabled]="!model.ident " (click)="getPasse()">
+                          <button class="btn btn-light" type="button" [disabled]="!model.ident " (click)="getPasse()"> -->
                             <!-- <i [ngClass]="{ 'fa fa-search': noPass, 'fa fa-repeat': noPass }" aria-hidden="true"></i> -->
-                            <i class="fa fa-search"  aria-hidden="true"></i>
+                            <!-- <i class="fa fa-search"  aria-hidden="true"></i>
                           </button>
                         </span>
                         <img *ngIf="goPass" src="/assets/images/loading.svg" />
                       </div>
                       <div *ngIf="noPass" class="help-block form-control-feedback">Pasajero no registrado</div>
-                  </div>
-                  <div class="form-group" [ngClass]="{ 'has-danger': f.submitted && !pasajero.valid }">
-                      <label for="pasajero">Nombre</label>
-                      <input type="text" class="form-control col-md-12" name="pasajero" [(ngModel)]="model.pass.pasajero" #pasajero="ngModel" [readonly]="!noPass" required />
-                      <div *ngIf="f.submitted && !pasajero.valid" class="help-block form-control-feedback">El nombre es requerido</div>
-                  </div>
-                  <div class="form-group" [ngClass]="{ 'has-warning': f.submitted && !pasajero.valid }">
-                      <label for="pais">Pais</label>
-                      <select2 [data]="paises" [value]="valuePa" (valueChanged)="changedPa($event)" name="pais" width="100%" ></select2><!--  [readonly]="!noPass" -->
-                      <!-- <div *ngIf="f.submitted && !pais.valid" class="help-block form-control-feedback">El país es requerido</div> -->
-                  </div>
-                  <div class="form-group" [ngClass]="{ 'has-danger': f.submitted && !noContacto.valid }">
-                      <label for="correo">Número de contacto</label>
-                      <input type="text" class="form-control col-md-8" name="noContacto" [(ngModel)]="model.pass.noContacto" #noContacto="ngModel" [readonly]="!noPass" required />
-                      <div *ngIf="f.submitted && !noContacto.valid" class="help-block form-control-feedback">El número de contacto es requerido</div>
-                  </div>
-                  <div class="form-group" [ngClass]="{ 'has-danger': f.submitted && !correo.valid }">
+                  </div> -->
+                  <div class="form-group">
                       <label for="correo">Correo electrónico</label>
-                      <input type="email" class="form-control col-md-8" name="correo" [(ngModel)]="model.pass.correo" #correo="ngModel" [readonly]="!noPass" required />
-                      <div *ngIf="f.submitted && !correo.valid" class="help-block form-control-feedback">El correo electrónico es requerido</div>
+                      <div class="input-group">
+                        <input type="email" class="form-control col-md-10" name="correo" [(ngModel)]="model.pass.correo" #correo="ngModel" (blur)="correo.valid && getPasse()" [readonly]="accion=='U'" [email]="true" required/>
+                        <img *ngIf="goPass" src="/assets/images/loading.svg" />
+                      </div>
+                      <div *ngIf="f.submitted && !correo.valid" class="invalid-feedback">Ingrese un electrónico válido</div>
+                      <div *ngIf="correo.touched && !correo.valid && !f.submitted">
+                        <p class="text-danger">Ingrese un electrónico válido</p>
+                      </div>
+                      <div *ngIf="esPass==false && correo.touched && correo.valid">
+                        <p class="text-warning">Pasajero no registrado</p>
+                      </div>
                   </div>
-                  <div class="form-group" [ngClass]="{ 'has-danger': f.submitted && !noPersonas.valid }">
+                  <div class="form-group">
+                      <label for="pasajero">Nombre</label>
+                      <div class="input-group">
+                        <input type="text" class="form-control col-md-12" name="pasajero" [(ngModel)]="model.pass.pasajero" #pasajero="ngModel" [readonly]="esPass && !editaPass_" required />
+                        <span class="input-group-btn">
+                          <button *ngIf="esPass && !editaPass_ && accion=='I'" class="btn btn-outline-danger" type="button" (click)="editaPass()">
+                            <i class="fa fa-pencil" aria-hidden="true"></i>
+                          </button>
+                          <button *ngIf="esPass && editaPass_" class="btn btn-outline-primary" type="button" (click)="correo.valid && pasajero.valid && noContacto.valid && goEditaPass()">
+                            <i class="fa fa-check" aria-hidden="true"></i>
+                          </button>
+                          <button *ngIf="esPass && editaPass_" class="btn btn-outline-danger" type="button" (click)="cancelEditaPass()">
+                            <i class="fa fa-times" aria-hidden="true"></i>
+                          </button>
+                        </span>
+                        <span *ngIf="editedPass && !editaPass_" class="mt-auto mb-auto ml-1">
+                          <i class="fa fa-check-circle-o fa-lg" style="color: #28a745;" aria-hidden="true"></i>
+                        </span>
+                      </div>
+                      <div *ngIf="(f.submitted && !pasajero.valid)" class="invalid-feedback">El nombre es requerido</div>
+                      <div *ngIf="!f.submitted && !pasajero.valid && pasajero.touched">
+                        <p class="text-danger">El nombre es requerido</p>
+                      </div>
+                  </div>
+                  <div class="form-group">
+                      <label for="pais">Pais</label>
+                      <select2 [data]="paises" [value]="valuePa" (valueChanged)="changedPa($event)" name="pais" width="100%" [disabled]="esPass && !editaPass_"></select2><!--  [readonly]="!noPass" -->
+                      <div *ngIf="f.submitted && !pais.valid" class="invalid-feedback">El país es requerido</div>
+                  </div>
+                  <div class="form-group">
+                      <label for="correo">Número de contacto</label>
+                      <input type="text" class="form-control col-md-8" name="noContacto" [(ngModel)]="model.pass.noContacto" #noContacto="ngModel" [readonly]="esPass && !editaPass_"/>
+                      <!-- <div *ngIf="f.submitted && !noContacto.valid" class="invalid-feedback">El número de contacto es requerido</div> -->
+                  </div>
+                  <div class="form-group">
                       <label for="noPersonas">Número de personas</label>
                       <input type="number" class="form-control col-md-4" name="noPersonas" [(ngModel)]="model.noPersonas" #noPersonas="ngModel" required />
-                      <div *ngIf="f.submitted && !noPersonas.valid" class="help-block form-control-feedback">El número de personas es requerido</div>
+                      <div *ngIf="f.submitted && !noPersonas.valid" class="invalid-feedback">El número de personas es requerido</div>
                   </div>
                   <div class="form-group">
                       <label for="notas">Notas</label>
@@ -130,12 +165,12 @@
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="form-group" [ngClass]="{ 'has-danger': f.submitted && !aerolinea.valid }">
+                  <div class="form-group">
                       <label for="aerolinea">Aerolínea</label>
                       <select class="custom-select form-control col-md-6" name="aerolinea" [(ngModel)]="model.idAerolinea" #aerolinea="ngModel" required>
                        <option *ngFor="let op of aerolineas" [value]="op.idAerolinea">{{op.aerolinea}}</option>
                       </select>
-                      <div *ngIf="f.submitted && !aerolinea.valid" class="help-block form-control-feedback">La aerolínea es requerida</div>
+                      <div *ngIf="f.submitted && !aerolinea.valid" class="invalid-feedback">La aerolínea es requerida</div>
                   </div>
                   <div class="form-group">
                       <label for="adicional"><strong>Adicionales</strong>
@@ -233,10 +268,17 @@
           <div class="modal-body">
               <div class="row">
                 <div class="col-md-6">
-                  <div class="form-group" [ngClass]="{ 'has-warning': noPass }">
+                  <!-- <div class="form-group" [ngClass]="{ 'has-warning': noPass }">
                     <label for="identificacion"><strong>Identificación</strong>
                     </label>
                     <p name="identificacion" class="text-muted">{{model.pass.identificacion}}</p>
+                  </div> -->
+                  <div class="form-group">
+                    <label for="correo"><strong>Correo electrónico</strong>
+                    </label>
+                    <p name="correo" class="text-muted">
+                      <a [href]="'mailto:' + model.pass.correo + '?Subject=Reserva%20' + model.idReserva" target="_top">{{model.pass.correo}}</a>
+                    </p>
                   </div>
                   <div class="form-group">
                     <label for="pasajero"><strong>Nombre</strong>
@@ -252,11 +294,6 @@
                     <label for="noContacto"><strong>Número de contacto</strong>
                     </label>
                     <p name="noContacto" class="text-muted">{{model.pass.noContacto}}</p>
-                  </div>
-                  <div class="form-group">
-                    <label for="correo"><strong>Correo electrónico</strong>
-                    </label>
-                    <p name="correo" class="text-muted">{{model.pass.correo}}</p>
                   </div>
                   <div class="form-group">
                     <label for="noPersonas"><strong>Número de personas</strong>
