--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div id="wrapper">
 	<section class="navClass">
 		<header class="encabezado exbrand">
-			<nav class="navbar navbar-toggleable-md navbar-light bg-faded fixed-top">
-			  <button *ngIf="!isLogged()" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar0" aria-controls="navbar0" aria-expanded="false" aria-label="Toggle navigation">
+			<nav class="navbar navbar-expand-lg navbar-light fixed-top">
+			  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar0" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			  </button>
 			  <a class="navbar-brand" href="#">
@@ -22,36 +22,27 @@
 			      <li class="nav-item">
 			        <a class="nav-link" [routerLink]="['/login']">Login</a>
 			      </li>
-			      <!-- <li class="nav-item">
-			        <a class="nav-link" [routerLink]="['/home']">Home</a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" [routerLink]="['/reserva']">Reservas</a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" [routerLink]="['/room']">Habitaciones</a>
-			      </li> -->
 			    </ul>
 			  </div>
-			  <div class="d-flex flex-row-reverse w-100">
+			  <div *ngIf="currentUser" class="d-flex flex-row-reverse w-100">
 			  	<div class="p-2">
-					<ul *ngIf="currentUser" class="navbar-nav">
-					  <li class="nav-item dropdown">
-					    <a class="nav-link dropdown-toggle" style="font-size:1rem;" href="#" id="ddMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					      {{currentUser.nombre}}
-					    </a>
-					    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="ddMenu">
-					      <a class="dropdown-item" [routerLink]="['/pass']">Cambiar Contraseña
-					      	<i class="fa fa-key" aria-hidden="true"></i>
-					      </a>
-					      <div class="dropdown-divider"></div>
-					      <a class="dropdown-item" [routerLink]="['/login']">Logout
-					      	<i class="fa fa-sign-out" aria-hidden="true"></i>
-					      </a>
-					    </div>
-					  </li>
-					</ul>
-				</div>
+						<ul class="navbar-nav">
+						  <li class="nav-item dropdown">
+						    <a class="nav-link dropdown-toggle" style="font-size:1rem;" href="#" id="ddMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						      {{currentUser.nombre}}
+						    </a>
+						    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="ddMenu">
+						      <a class="dropdown-item" [routerLink]="['/pass']">Cambiar Contraseña
+						      	<i class="fa fa-key" aria-hidden="true"></i>
+						      </a>
+						      <div class="dropdown-divider"></div>
+						      <a class="dropdown-item" [routerLink]="['/login']">Logout
+						      	<i class="fa fa-sign-out" aria-hidden="true"></i>
+						      </a>
+						    </div>
+						  </li>
+						</ul>
+					</div>
 				</div>
 			</nav>
 		</header>
