--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -30,9 +30,9 @@
                   </div>
               </div>
               <div class="form-group">
-                  <button [disabled]="loading" class="btn btn-primary">Registrar</button>
-                  <img *ngIf="loading" src="/assets/images/loading.svg" />
-                  <a *ngIf="!loading" [routerLink]="['/home']" class="btn btn-link">Cancel</a>
+                <img *ngIf="loading" src="/assets/images/loading.svg" />
+                <button [disabled]="loading" class="btn btn-primary">Guardar</button>
+                <a *ngIf="!loading" [routerLink]="['/home']" class="btn btn-link">Cancelar</a>
               </div>
           </form>
         </div>
