--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -65,8 +65,8 @@
               </div>
               <div class="form-group">
                   <img *ngIf="loading" src="/assets/images/loading.svg" />
-                  <button *ngIf="!loading" class="btn btn-primary">Registrar</button>
-                  <a *ngIf="!loading" [routerLink]="['/login']" class="btn btn-link">Cancel</a>
+                  <button *ngIf="!loading" class="btn btn-primary">Registrarse</button>
+                  <a *ngIf="!loading" [routerLink]="['/login']" class="btn btn-link">Cancelar</a>
               </div>
           </form>
         </div>
