--- a/src/app/registrosuccess/registrosuccess.component.html
+++ b/src/app/registrosuccess/registrosuccess.component.html
@@ -2,9 +2,9 @@
   <div class="card ml-auto mr-auto">
     <div class="card-body">
       <p>Tu registro se completó correctamente, no olvides confirmar tu cuenta con el mensaje enviado a tu correo.</p>
-      <p>Inicia sesión dando click
+      <!-- <p>Inicia sesión dando click
         <a [routerLink]="['/login']">aquí</a>
-      </p>
+      </p> -->
     </div>
   </div>
 </section>
